ExpenseSplitter.Frontend/ExpenseSplitter.Web/src/app/pages/trips-list/trips-list.component.scss
@import "src/scss/_colors";
@import "src/scss/_mixins";

:host  {
	@include is-animated-host;
}

.trips {
    margin-bottom: 88px;
    padding: 0;

    .trip {
        border-bottom: 1px solid mat-color($black-palette, 50);
        background: mat-color($accent-palette, 50);
        padding: 8px 24px;
        display: flex;
        align-items: center;
        text-decoration: none;
        color: mat-color($black-palette, 400);

        .details {
            .name {
                line-height: 24px;
                font-weight: 600;
                color: $primary;
                margin-bottom: 4px;
            }

            .description {
                line-height: 16px;
            }
        }

        .actions {
            margin-left: auto;
            mat-icon {
                vertical-align: middle;
            }
        }
    }
}

.add-new {
    position: fixed;
    bottom: 16px;
    right: 16px;
    a {
        color: $white;
    }
}

